<resources>
    <string name="app_name">UnQueue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unqueue">UnQueue</string>
    <string name="average_waiting_time_is_10_minutes">Average waiting time is 10 minutes</string>
    <string name="_20_people_are_waiting_ahead_in_your_queue">20 people are waiting ahead in your queue</string>
    <string name="notify_me_when_my_turn_comes">Notify me when my turn comes</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="what_is_unqueue">What is UnQueue?</string>
    <string name="user">User</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="continue_text">Continue</string>
    <string name="enter_your_mobile_number">Enter your mobile number *</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name *</string>
    <string name="one_time_registration">One Time Registration</string>
    <string name="enter_your_otp">Enter your OTP *</string>
    <string name="check_the_otp_sent_to_the_entered_number">Check the OTP sent to the entered number</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="supermarket">Supermarket</string>
    <string name="airport">Airport</string>
    <string name="ticket_counter">Ticket Counter</string>
    <string name="food_chains">Food Chains</string>
    <string name="government_office">Government Office</string>
    <string name="bank">Bank</string>
    <string name="hospital">Hospital</string>
    <string name="where_are_you">Where are you?</string>
    <string name="give_this_qid_to_the_person_behind_the_reception">Give this QID to the person behind the reception</string>
    <string name="your_unique_qid">Your Unique QID</string>
    <string name="get_started">Get Started</string>
</resources>