<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.main.WhereAreYouFragment">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/unqueue"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:drawablePadding="7dp"
        app:drawableStartCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvWhere"
        android:layout_below="@id/tvName"
        android:text="@string/where_are_you"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="?android:textColorPrimary"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@id/tvWhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:text="@string/hospital"
                android:textAllCaps="false"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/bank"
                android:textAllCaps="false"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/government_office"
                android:textAllCaps="false"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/food_chains"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/ticket_counter"
                android:textAllCaps="false"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/airport"
                android:textAllCaps="false"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/supermarket"
                android:backgroundTint="@color/lightGrey"
                android:padding="15dp"
                android:textColor="?android:textColorPrimary"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/appColor"
        android:padding="15dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>