<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.RegisterFragment">

    <TextView
        android:text="@string/unqueue"
        android:textColor="?android:textColorPrimary"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/one_time_registration"
        android:layout_gravity="center"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/name"
        android:textColor="?android:textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:background="@drawable/custom_et"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <TextView
        android:text="@string/enter_your_mobile_number"
        android:textColor="?android:textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@drawable/custom_et"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/etContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:ccpDialog_showFlag="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            app:ccp_defaultPhoneCode="91"
            tools:ccp_contentColor="?android:textColorPrimary"
            tools:ccp_textSize="20dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_gravity="center"
            app:dividerColor="?android:textColorPrimary"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:inputType="phone"
            android:textColor="?android:textColorPrimary"
            android:background="@android:color/transparent"
            android:maxLength="10"
            android:padding="5dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <TextView
        android:text="or"
        android:layout_gravity="center"
        android:textColor="?android:textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <Button
        android:text="@string/sign_up_with_google"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/continue_text"
        android:backgroundTint="@color/appColor"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>