<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.register.WhoAreYouFragment">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/unqueue"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWhat"
        android:layout_below="@id/tvName"
        android:text="@string/what_is_unqueue"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_below="@id/tvWhat"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/image"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@id/image"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:text="@string/lorem_ipsum"
        android:textColor="?android:textColorPrimary" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/appColor"
        android:padding="15dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>