<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.main.QueueFragment">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/unqueue"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:drawablePadding="7dp"
        app:drawableStartCompat="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="@string/your_unique_qid"
        android:textColor="?android:textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvQID"
        android:layout_above="@id/qrCode"
        android:layout_marginHorizontal="35dp"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:textColor="?android:textColorPrimary"
        android:background="@drawable/custom_et"
        android:text="HOS2131"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_qr_code_2_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnContinue"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:text="@string/give_this_qid_to_the_person_behind_the_reception"
        android:textColor="?android:textColorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/appColor"
        android:padding="15dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>